Upgrade packages (Qiskit 2.1)

--- a/Chapter_04.ipynb
+++ b/Chapter_04.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pip install qiskit==2.0"
+    "pip install qiskit==2.1"
    ]
   },
   {
@@ -27,7 +27,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pip install qiskit_ibm_runtime==0.38"
+    "pip install qiskit_ibm_runtime==0.40"
    ]
   },
   {
@@ -57,7 +57,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pip install matplotlib==3.9"
+    "pip install matplotlib==3.10"
    ]
   },
   {
@@ -430,19 +430,19 @@
    "outputs": [],
    "source": [
     "from qiskit_ibm_runtime import QiskitRuntimeService\n",
-    "token = \"YOUR TOKEN GOES HERE\"\n",
-    "service = QiskitRuntimeService(token = token, channel = \"ibm_quantum\")"
+    "token = \"YOUR API KEY GOES HERE\"\n",
+    "service = QiskitRuntimeService(token = token, channel = \"ibm_quantum_platform\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "c518ff35-1b0f-42c1-a10b-83902fbb377d",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Use the code below to save your account on your computer.\n",
-    "# QiskitRuntimeService.save_account(token = token, channel = \"ibm_quantum\")"
+    "# QiskitRuntimeService.save_account(token = token, channel = \"ibm_quantum_platform\")"
    ]
   },
   {
